# g-challenge

./: .gitignore  Jenkinsfile  README.md
.github/workflows/: python-app.yml
g_challenge/: .env  .env.dev  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  startup.py
g_challenge/g_challenge/src/: main.py  settings.py
g_challenge/g_challenge/src/core/db/: create_schemas.py  db_connect.py  departments.py  hired_employees.py  jobs.py
g_challenge/g_challenge/src/docs/: database_er_diagram.drawio
g_challenge/g_challenge/src/v1/: application_apis.py
