[tool.poetry]
name = "g-challenge"
version = "0.1.0"
description = ""
authors = ["Hector Vergara <hvergara@inovecode.com>"]
readme = "README.md"
packages = [{include = "g_challenge"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
autopep8 = "^2.0.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
